<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="347dp"
            android:layout_height="57dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/txt_01"
            android:inputType="textPersonName"
            android:text="Username"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/title01"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="347dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text02"
            android:inputType="textPersonName"
            android:text="Email"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="363dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text03"
            android:inputType="textPersonName"
            android:text="Phone Number"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="353dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/text05"
            android:inputType="textPersonName"
            android:text="Retype Password"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="352dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text04"
            android:inputType="textPersonName"
            android:text="Password"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/title01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/titles01"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

        <Button
            android:id="@+id/button2"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>